2005-07-09  Nathaniel Smith  <njs@pobox.com>

	* schema.sql (revision_ancestry__child, revision_certs__id,
	revision_certs__name_value): New indexes.
	* database.cc (dump, dump_table_cb, dump_index_cb): Include
	indexes in dumps.
	(database::database): 
	* schema_migration.cc (migrate_monotone_schema) 
	(migrate_client_to_add_indexes): 
	* tests/t_migrate_schema.at: Corresponding migration gunk.

2005-07-09  Jordan Breeding  <jordan.breeding@mac.com>

	* Makefile.am (monotone_CPPFLAGS, unit_tests_CPPFLAGS): 
	* configure.ac (BOOST_FIX_VERSION): Restrict boost compile kluges
	to boost 1.32.

2005-07-10  Matthew Gregan  <kinetik@orcon.net.nz>

	* configure.ac: Check for boost >= 1.32.

2005-07-09  Nathaniel Smith  <njs@pobox.com>

	* schema_migration.cc (calculate_schema_id): Include indexes in
	the schema id.

2005-07-09  Nathaniel Smith  <njs@pobox.com>

	* ChangeLog, configure.ac: Revert accidentally-committed changes.

2005-07-09  Nathaniel Smith  <njs@pobox.com>

	* monotone.texi (Generating Keys): Make it a little clearer that
	we aren't necessarily recommending people store their passphrase
	in plaintext.

2005-07-08  Matt Johnston  <matt@ucc.asn.au>

	* tests/t_normalized_filenames.at: expect exit code of 1 not 3 for
	"cat manifest" with a directory in MT/work
	* file_io.cc, netcmd.cc, transforms.cc, vocab.hh: revert changes which
	used swap() for strings and atomic types since strings are
	copy-on-write.

2005-07-08  Matt Johnston  <matt@ucc.asn.au>

	* file_io.cc (ident_existing_file): new function to calculate
	the ident of a file failing gracefully if it doesn't exist
	or is a directory.
	* file_io.hh (classify_manifest_paths,
	build_restricted_manifest_map): use ident_existing_file
	* ui.cc: cast to avoid compiler warnings

2005-07-07  Nathaniel Smith  <njs@pobox.com>

	* contrib/ciabot_monotone.py (Monotone.log): Fix to work with
	0.20.

2005-07-07  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (monotone_CPPFLAGS, unit_tests_CPPFLAGS): Add