@@ -1,0 +1,55 @@
+AT_SETUP([get_netsync_read_permitted])
+MONOTONE_SETUP
+NETSYNC_SETUP
+
+ADD_FILE(testfile, [1
+])
+COMMIT(branch1)
+B1=`BASE_REVISION`
+
+SET_FILE(testfile, [2
+])
+COMMIT(branch2)
+B2=`BASE_REVISION`
+
+ADD_FILE(testfile, [3
+])
+COMMIT(branch3)
+B3=`BASE_REVISION`
+
+SET_FILE(testfile, [4
+])
+COMMIT(branch4)
+B4=`BASE_REVISION`
+
+# Allow permission to branch1 and branch3 only
+# pulling more than that should error out
+# pulling exactly that should give revs B1, B2, B3; and only give
+# branch certs on B1, B3.
+
+AT_DATA(limited_permission.at, [function get_netsync_read_permitted(branch, key)
+  if branch == "branch1" then return true end
+  if branch == "branch3" then return true end
+  return false
+end
+])
+
+NETSYNC_SERVE_START(--rcfile=limited_permission.at '*')
+
+NETSYNC_CLIENT_RUN(pull, 'branch*')
+AT_CHECK(MONOTONE2 cat revision $B1, [1], [ignore], [ignore])
+AT_CHECK(MONOTONE2 cat revision $B2, [1], [ignore], [ignore])
+AT_CHECK(MONOTONE2 cat revision $B3, [1], [ignore], [ignore])
+AT_CHECK(MONOTONE2 cat revision $B4, [1], [ignore], [ignore])
+
+NETSYNC_CLIENT_RUN(pull, branch1 branch3)
+AT_CHECK(MONOTONE2 cat revision $B1, [], [ignore], [ignore])
+AT_CHECK(MONOTONE2 cat revision $B2, [], [ignore], [ignore])
+AT_CHECK(MONOTONE2 cat revision $B3, [], [ignore], [ignore])
+AT_CHECK(MONOTONE2 cat revision $B4, [1], [ignore], [ignore])
+
+AT_CHECK(MONOTONE2 ls certs $B2 | grep -q branch2, [1])
+
+NETSYNC_SERVE_STOP
+
+AT_CLEANUP
