@@ -1,3 +1,11 @@
+2005-07-10  Nathaniel Smith  <njs@pobox.com>
+
+	* tests/t_netsync_read_permissions.at: New test.
+	* testsuite.at: Run it.
+	* netsync.cc (set_session_key, dispatch_payload)
+	(respond_to_auth_cmd): Refactor to key HMAC earlier, so error
+	packets will get the right HMAC.
+
 2005-07-09  Nathaniel Smith  <njs@pobox.com>
 
 	* schema.sql (revision_ancestry__child, revision_certs__id,
